--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                       <!-- Conference name and year -->
                     </span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding author</small></span>
+                    <br><strong>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) 2025</strong>
                   </div>
                   <!-- <div class="is-size-5 publication-authors">
                     <span class="author-block">Institution Name<br>Conferance name and year</span>
